--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "dusterio/lumen-passport": "^0.2.19",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/lumen-framework": "^7.0"
     },
